<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.RequestHelp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bottom"
        android:backgroundTint="@color/main_color">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                android:backgroundTint="@color/white"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                style="@style/Widget.Material3.CardView.Filled">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/back"
                    android:layout_gravity="center"/>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emergency_help"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_centerInParent="true"
                android:textAlignment="center"/>

        </RelativeLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                android:layout_margin="10dp"
                style="@style/Widget.Material3.CardView.Filled">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/information"
                        android:layout_marginEnd="10dp"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notice"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins"
                        android:textAlignment="center"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Garage Information"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_semibold"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtGarageName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/poppins"/>

                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:focusable="false"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="5dp"
                        android:layout_gravity="center"
                        android:progressTint="@color/yellow"
                        android:clickable="false"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Information About You Facing the Issue"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins_semibold"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtIssueTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/issue_title_what_is_the_issue"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtIssueDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/describe_the_issue_in_detail"
                    app:counterEnabled="true"
                    app:counterMaxLength="200"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:inputType="textMultiLine"
                        android:maxLines="5"
                        android:lines="5"
                        android:gravity="start"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtVehicleModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Vehicle Model / Year (Honda Civic 2019)"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_location_you_are_at"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_location"
                android:fontFamily="@font/poppins_bold"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <Button
                android:id="@+id/btnCheckLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/main_color"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/check_your_location_here" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Attach a photo of the issue"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins"
                android:textAlignment="center"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/btnAttachImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/main_color"
                android:fontFamily="@font/poppins_medium"
                android:text="Attach" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewImages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                tools:listitem="@layout/custom_image_item"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <Button
                android:id="@+id/btnRequestHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/main_color"
                android:fontFamily="@font/poppins_medium"
                android:text="Request Help" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>