<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.UpdateProfile"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bottom"
        android:backgroundTint="@color/main_color">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                android:backgroundTint="@color/white"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                style="@style/Widget.Material3.CardView.Filled">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/back"
                    android:layout_gravity="center"/>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update Profile"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_centerInParent="true"
                android:textAlignment="center"/>

        </RelativeLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/layoutHeader"
            android:layout_margin="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Home Address"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:lines="3"
                    android:gravity="start"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Contact Number"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtIDNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/identity_card_number"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="text|number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnChooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:elevation="8dp"
                    android:backgroundTint="@color/main_color"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Choose Profile Image"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:backgroundTint="@color/white"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0"
                    style="@style/Widget.Material3.CardView.Filled">

                    <ImageView
                        android:id="@+id/imgProfile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/avatar"
                        android:scaleType="centerCrop"/>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/main_color"
                android:fontFamily="@font/poppins_medium"
                android:text="Update Profile" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>